fixed broken css and added nav links

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+}
 
 :root{
     --primary-color: #0093b8 ;
@@ -9,13 +13,6 @@
     --paragraph-light-text: #ffffff; 
     --test-blue: #76cdff;
     
-}
-
-*{
-    padding: 0;
-    margin: 0; 
-    box-sizing: border-box;
-
 }
 
 body{
@@ -46,7 +43,8 @@ nav{
     list-style: none;
     display:flex ;
     align-items: center ;
-    gap: 4rem;
+    -ms-flex-align: stretch;
+    gap: 14rem;
 }
 
 .nav__link {
@@ -69,7 +67,7 @@ nav{
 
 .social__icons .icon {
     width: 3rem;
-    aspect-ratio: 1;
+aspect-ratio: 1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,13 +90,14 @@ nav{
 .social__icons.icon:hover i{
     scale: 1.2;
 }
-main{
-    flex: 1;
-    background-image: url("assets/Personal Photo BG Image.jpg");
-    background-position: center; 
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
+
+.background-image {
+flex: 1;
+background-image: url("assets/Personal Photo BG Image.jpg");
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+height: 100vh;
 }
 
 .container{
@@ -115,7 +114,7 @@ main{
     font-size: 4rem;
     font-weight: 700;
     color: var(--paragraph-light-text);
-    padding: 1%
+    padding: 5%
 }
 
 .container h1:hover{
@@ -168,3 +167,37 @@ form button:hover{
     transition: .9s;
 }
 
+.mainProject-container{
+    display: flex;
+    flex: auto;
+    justify-content: right;
+    background-color: #0f172a;
+
+}
+
+h2{
+    font-size: 400%;
+    padding: 3%;
+    color: var(--primary-color);
+}
+
+.image-resize-mainProject{
+    width: 1280px;
+    object-fit: cover;
+    object-position: center center;
+}
+
+.subproject-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: right;
+    background-color: #0f172a;
+    }
+
+.image-resize{
+    height: 246px;
+    object-fit: cover;
+    object-position: center center;
+    width: 640px;
+}
